translation-tool/inputs/source_meta/objects/Location_Order_LineItem__c.object
<CustomObject>
    <fields>
        <fullName>Adapter_Type__c</fullName>
        <label>Adapter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Billable_Entity__c</fullName>
        <label>Additional Billable Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <label>Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Agent_ID__c</fullName>
        <label>Alternate Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Retries_Counter__c</fullName>
        <label>Auto Retries Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Retries_Exhausted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Retries Exhausted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Retries_Last_Attempt__c</fullName>
        <label>Auto Retries Last Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BYOB_IP_Address__c</fullName>
        <label>BYOB IP Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DHCP</fullName>
                </value>
                <value>
                    <fullName>Static IP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boleto_Add_On_Fee_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DI task to update this field to true if Boleto based Adherence fee is not received within expiration period and order is canceled in on-premise systems</description>
        <label>Boleto Add On Fee Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_RP_CaseProtocolID__c</fullName>
        <formula>Location_Order__r.Case__r.HSvc_ProtocolId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ProtocolID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_RP_Contact_Name__c</fullName>
        <formula>Location_Order__r.Contact__r.FirstName+&apos; &apos;+Location_Order__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Code__c</fullName>
        <label>Cancel Reason Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Description__c</fullName>
        <label>Cancel Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Commitment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustReq_InstRep_AMPM__c</fullName>
        <label>Customer Req Install/Repair AM/PM</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustReq_InstRep_DateCode__c</fullName>
        <label>Customer Req Install/Repair Date Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustReq_InstRep_Date__c</fullName>
        <label>Customer Req Install/Repair Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Device_ID__c</fullName>
        <label>Customer Device ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LAN1IP_Address__c</fullName>
        <label>Customer LAN1IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LAN1_Index__c</fullName>
        <label>Customer LAN1 Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LAN1_Subnet_Mask__c</fullName>
        <label>Customer LAN1 Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LAN2IP_Address__c</fullName>
        <label>Customer LAN2IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LAN2_Index__c</fullName>
        <label>Customer LAN2 Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LAN2_Subnet_Mask__c</fullName>
        <label>Customer LAN2 Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Site_Category__c</fullName>
        <label>Customer Site Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSL_Tel_Number__c</fullName>
        <label>DSL Tel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Order_ID__c</fullName>
        <label>DSS Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Response_Code__c</fullName>
        <label>DSS Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Response_Description__c</fullName>
        <description>DSS Response</description>
        <label>DSS Response Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSS_Response_Status__c</fullName>
        <label>DSS Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Gateway__c</fullName>
        <label>Default Gateway</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Code__c</fullName>
        <label>Equipment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This field is used by DI task to update Boleto_Add_On_Fee_Expired__c field or FSO_Id__c or DSS_Order_Id__c field or all.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSO_Details__c</fullName>
        <label>FSO Details</label>
        <length>10</length>
        <referenceTo>HNSSERVICEORDERVIEW__x</referenceTo>
        <relationshipLabel>Location Order LineItems</relationshipLabel>
        <relationshipName>Location_Order_LineItems</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>FSO_ID__c</fullName>
        <label>FSO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAN_Prime__c</fullName>
        <description>Value of Product Code</description>
        <label>HAN Prime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_SFDC_ORD_SEARCH_VW__c</fullName>
        <label>HNS_SFDC_ORD_SEARCH_VW</label>
        <length>10</length>
        <referenceTo>HNS_SFDC_ORD_SEARCH_VW__x</referenceTo>
        <relationshipLabel>Location Order LineItems</relationshipLabel>
        <relationshipName>Location_Order_LineItems</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Location_Order__c</fullName>
        <label>Location Order</label>
        <referenceTo>Location_Order__c</referenceTo>
        <relationshipLabel>Location Order LineItems</relationshipLabel>
        <relationshipName>Location_Order_LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NAP_Source__c</fullName>
        <description>Only for Wireline</description>
        <label>NAP Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_Sub_Type__c</fullName>
        <description>Only for Wireline</description>
        <label>NAP Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natted_IP_Address__c</fullName>
        <label>Natted IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Estimated_Retry_Time__c</fullName>
        <formula>IF((Location_Order__r.Is_Incomplete_Order__c &amp;&amp; NOT(Auto_Retries_Exhausted__c) &amp;&amp; Auto_Retries_Counter__c &gt; 0),(Auto_Retries_Last_Attempt__c + ((Auto_Retries_Counter__c + 1) * Value($Label.Common_Graduated_Retry_Factor))/(60*24)),IF(Auto_Retries_Exhausted__c ||  NOT(Location_Order__r.Is_Incomplete_Order__c) ||  ISBLANK(DSS_Response_Code__c),null,Now()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Estimated Retry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_LineItem_Name__c</fullName>
        <label>Offer LineItem Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_LineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer LineItem</label>
        <referenceTo>OfferLineItem__c</referenceTo>
        <relationshipLabel>Location Order LineItems</relationshipLabel>
        <relationshipName>Location_Order_LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Type__c</fullName>
        <label>Order Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Downlink_Speed__c</fullName>
        <description>Only for Wireline</description>
        <label>Ordered Downlink Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Uplink_Speed__c</fullName>
        <description>Only for Wireline</description>
        <label>Ordered Uplink Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Price__c</fullName>
        <label>Override Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <label>PIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Distributor_ID__c</fullName>
        <label>Requested Distributor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN__c</fullName>
        <description>&quot;If Existing SAN in Cust LocationsOrdsBulkUploadCSV = Null, then do 

SAN_Prefix__c from Cust_Ordering_Template_Line_Items__c + Customer Location ID from CSV + SAN_Suffix__c from Cust_Ordering_Template_Line_Items__c

Else, copy Existing SAN from Cust LocationsOrdsBulkUploadCSV&quot;</description>
        <label>SAN</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Reason_Code__c</fullName>
        <label>Site Reason Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_IP_Address__c</fullName>
        <label>Static IP Address</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subnet_Mask__c</fullName>
        <label>Subnet Mask</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <label>Location Order LineItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOCORDLI-{0000000000}</displayFormat>
        <label>Location Order LineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Order LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>